# tap-coingecko

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml
tap_coingecko/: __init__.py  __main__.py  client.py  schema.py  streams.py  tap.py
tests/: __init__.py  test_core.py
